# msgraph

./: .buildconfig  .gitlab-ci.yml  NEWS  README.md  gcovr.cfg  meson.build  meson_options.txt  msgraph.doap
.gitlab-ci/: README.md  coverity.Dockerfile  fedora.Dockerfile  run-docker.sh
data/: check-code-style  uncrustify.cfg
doc/: build-howto.md  meson.build  msg.toml.in
example/: drive  drive.c  mail.c  meson.build
src/: libmsgraph.map  meson.build  msg-authorizer.c  msg-authorizer.h  msg-error.c  msg-error.h  msg-goa-authorizer.c  msg-goa-authorizer.h  msg-input-stream.c  msg-input-stream.h  msg-json-utils.c  msg-json-utils.h  msg-oauth2-authorizer.c  msg-oauth2-authorizer.h  msg-private.h  msg-service.c  msg-service.h  msg-uploader.c  msg-uploader.h  msg-version.h.in  msg.h
src/contact/: msg-contact-service.c  msg-contact-service.h  msg-contact.c  msg-contact.h
src/drive/: msg-drive-item-file.c  msg-drive-item-file.h  msg-drive-item-folder.c  msg-drive-item-folder.h  msg-drive-item.c  msg-drive-item.h  msg-drive-service.c  msg-drive-service.h  msg-drive.c  msg-drive.h  msg-site.c  msg-site.h
src/mail/: msg-mail-folder.c  msg-mail-folder.h  msg-mail-message.c  msg-mail-message.h  msg-mail-service.c  msg-mail-service.h
src/message/: msg-mail-folder.c  msg-mail-folder.h  msg-message-service.c  msg-message-service.h  msg-message.c  msg-message.h
src/user/: msg-contact-folder.c  msg-contact-folder.h  msg-user-contact-folder.c  msg-user-contact-folder.h  msg-user-service.c  msg-user-service.h  msg-user.c  msg-user.h
tests/: authorization.c  common.c  common.h  contact.c  drive.c  mail.c  meson.build  message.c  msg-dummy-authorizer.c  msg-dummy-authorizer.h  msg-test.c  service.c  user.c
tests/traces/contact/: get-contacts  setup-temp-contact  teardown-temp-contact
tests/traces/drive/: copy-item  create-folder  create-folder.hosts  delete-item  download-check-item  download-io-item  download-item  download-item.hosts  download-url  list-folder  move-item  rename-item  setup-temp-item-spreadsheet  setup-temp-item-spreadsheet.hosts  teardown-temp-item  test-drive  test-shared-with-me
tests/traces/mail/: create-message  get-folder  get-folder-id  get-folder-id.hosts  get-folders  get-messages  setup-temp-message  teardown-temp-message
tests/traces/message/: get-folder  get-folders  get-messages  setup-temp-message  teardown-temp-message
tests/traces/user/: find-users  get-contact-folders  get-contacts  get-contacts.hosts  get-photo  get-photo.hosts  get-user  get-user.hosts
